<resources>
    <string name="app_name">QueueHub</string>
    <string name="select_file">Select File</string>
    <string name="album_art">Album Art</string>
    <string name="artist_name">Artist Name</string>
    <string name="start_activity">Start Session</string>
    <string name="join_activity">Join Session</string>
    <string name="enter_session_id">Enter Session ID</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="song_name">Song Name</string>
    <string name="title">qHub</string>
    <string name="separate">-or-</string>
    <string name="playing_title">Playing Title</string>
    <string name="playing_artist">Playing Artist</string>
    <string name="add_to_queue">Add to Queue</string>
</resources>
